# 23203_lukyanets

OOP/game_life/: CMakeLists.txt  cell.cpp  cell.h  customscene.cpp  customscene.h  gameoflife.cpp  gameoflife.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
OOP/lab1/: CMakeLists.txt  Vector.cpp  Vector.h  flat_map_test.cpp  flatmap.cpp  flatmap.h  main.cpp  unit test  vector.cpp
OOP/lab2/: CMakeCache.txt  CMakeLists.txt
OOP/lab2/configs/: simple.cfg
OOP/lab2/src/: Card.cpp  Card.h  Deck.cpp  Deck.h  DynamicLoader.cpp  DynamicLoader.h  GameEngine.cpp  GameEngine.h  SimpleStrategy.cpp  SimpleStrategy.h  StrategyFactory.cpp  StrategyFactory.h  Tournament.cpp  Tournament.h  player.cpp  player.h  strategy.cpp  strategy.h
zulu_sentiment_analysis/configs/: data_config.yaml  model_config.yaml
zulu_sentiment_analysis/data/raw/: zulu_news_scraped.csv
zulu_sentiment_analysis/src/ inference/: predict.py
zulu_sentiment_analysis/src/ inference/api/: app.py
zulu_sentiment_analysis/src/data_processing/: clean_dataset.py  generate_synthetic.py  scrape_zulu_news.py
zulu_sentiment_analysis/src/training/: evaluate.py  train.py
zulu_sentiment_analysis/src/utils/: constants.py  helpers.py
